--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "12306-mcp",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.1.0",
+  "main": "build/index.js",
   "scripts": {
     "build": "tsc",
     "test": "tsc && node ./build/index.js",
     "debug": "tsc && npx @modelcontextprotocol/inspector node ./build/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": ["mcp","12306", "mcp-server"],
+  "author": "joooook",
+  "license": "MIT",
+  "description": "This is a 12306 ticket search server based on the Model Context Protocol (MCP). ",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.9.0",
     "axios": "^1.8.4",
@@ -25,6 +25,7 @@
     "12306-mcp": "./build/index.js"
   },
   "files": [
-    "build"
+    "build",
+    "imgs"
   ]
 }
